--- a/index.html
+++ b/index.html
@@ -32,38 +32,84 @@
 
     </header>
 
+    <main>
+        <!-- Hero image -->
+        <section>
+            <h1>Effective Solutions for Your Business</h1>
+            <button type="button">Order Service</button>
+        </section>
 
-    <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button>Order Service</button>
-    </section>
+        <!-- Section 1 -->
+        <section>
+            <h2 hidden>Features</h2>
 
+            <ul>
+                <li>
+                    <h3>Strategy</h3>
+                    <p>Our goal is to identify the businessproblem to walk away with the perfect and creative solution.
+                    </p>
+                </li>
+                <li>
+                    <h3>Punctuality</h3>
+                    <p>Bring the key message to the brand's audience for the best price within the shortest possible
+                        time.
+                    </p>
+                </li>
+                <li>
+                    <h3>Diligence</h3>
+                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
+                        risk.</p>
+                </li>
+                <li>
+                    <h3>Technologies</h3>
+                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
+                        problem-solving.
+                    </p>
+                </li>
+            </ul>
+        </section>
 
-    <section>
-        <h2 hidden>hidden</h2>
+        <!-- Section 2 -->
+        <section>
+            <h2>What are we doing</h2>
+            <ul>
+                <li><img src="./images/rectangle1.jpg" alt="Dashboard of monitor" width="360" height="300"></li>
+                <li><img src="./images/rectangle2.jpg" alt="Four printscreens" width="360" height="300"></li>
+                <li><img src="./images/rectangle3.jpg" alt="Phone in hand" width="360" height="300"></li>
+            </ul>
+        </section>
 
-        <ul>
-            <li>
-                <h3>Strategy</h3>
-                <p>Our goal is to identify the businessproblem to walk away with the perfect and creative solution. </p>
-            </li>
-            <li>
-                <h3>Punctuality</h3>
-                <p>Bring the key message to the brand's audience for the best price within the shortest possible time.
-                </p>
-            </li>
-            <li>
-                <h3>Diligence</h3>
-                <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
-                    risk.</p>
-            </li>
-            <li>
-                <h3>Technologies</h3>
-                <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
-                </p>
-            </li>
-        </ul>
-    </section>
+        <!-- Section 3 -->
+        <section>
+            <h2>Our Team</h2>
+            <ul>
+                <li><img src="./images/team/product-designer.jpg" alt="Photo of Product Designer" width="264" height="260">
+                    <h3>Mark Guerrero</h3>
+                    <p>Product Designer</p>
+                </li>
+                <li><img src="./images/team/front-devel.jpg" alt="Photo of Frontend Developer" width="264" height="260">
+                    <h3>Tom Ford</h3>
+                    <p>Frontend Developer</p>
+                </li>
+                <li><img src="./images/team/marketing.jpg" alt="Photo of Marketing" width="264" height="260">
+                    <h3>Camila Garcia</h3>
+                    <p>Marketing</p>
+                </li>
+                <li><img src="./images/team/ul-designer.jpg" alt="Photo of UI Designer" width="264" height="260">
+                    <h3>Daniel Wilson</h3>
+                    <p>UI Designer</p>
+                </li>
+            </ul>
+        </section>
+    </main>
+
+    <!-- Footer of page -->
+    <footer>
+        <a href="">WEB<span>STUDIO</span></a>
+        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    </footer>
 </body>
+
+
 
 </html>
